# memorizer

./: .env.example  .gitignore  BLUEPRINT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  RELEASE_NOTES_DRAFT.md  RELEASING.md  ROADMAP.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-test.txt  requirements.txt
.benchmarks/: relevance_smoke.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_init.py  0002_api_keys.py  0003_ingestion_jobs.py  0004_documents_connectors.py  0005_prod_iteration.py  0006_admin_iteration.py
app/: main.py  tasks.py  worker.py
app/api/: admin_deps.py  admin_routes.py  deps.py  routes.py
app/core/: config.py  security.py
app/models/: admin_token.py  api_key.py  audit_log.py  connector.py  document.py  event_log.py  governance_task.py  ingestion_job.py  memory.py  tenant.py  tenant_namespace.py
app/schemas/: admin.py  api_key.py  connector.py  document.py  job.py  memory.py  profile.py
app/services/: embedder.py  (+10 more)
docs/: README.md  adoption-checklist.md  api-examples.md  api-reference.md  architecture-diagrams.md  architecture.md  getting-started-10min.md  integrations-agents.md  llms-full.txt  llms.txt  migration-from-mem0-zep.md  openapi.md  operations.md  production-deploy.md  quickstart.md  recipes-by-role.md  runbook-admin.md  security.md  troubleshooting.md
memorizer_cli/: cli.py
scripts/: create_api_key.py  memorizer  memorizer_cli.py
sdk/: README.md
(+20 files in other folders)
